feat: allow office managers to set classes for teachers
closes #19
